--- a/index.html
+++ b/index.html
@@ -19,23 +19,74 @@
 
 
 
-    <div>
+    <div class="bg-img">
 
 
-        <h1 class="center">Let’s Help Those Who Are </h1>
-        <h1 class="center">More In Need</h1>
-        <p class="center1">Food For The Poor offers many ways for you to help support <br> the poor. Our monthly giving
+        <h1 class="center white">Let’s Help Those Who Are </h1>
+        <h1 class="center white">More In Need</h1>
+        <p class="center1 white">Food For The Poor offers many ways for you to help support <br> the poor. Our monthly
+            giving
             program and
             our gift catalog <br> are great places to start!
 
         </p>
         <a class="link-margin" href="https://www.bkash.com/" target="_blank">Donate Now</a>
     </div>
-    <section>
-        <div>
-            <h1 class="center1">Donate Today</h1>
+
+    <div class="center2">
+        <h1>Donate Today</h1>
+        <p>People and organizations who want to help fight the pandemic <br> and support WHO and partners can now donate
+        </p>
+    </div>
+
+    <div class="flex">
+        <h1 id="color">100Tk</h1>
+        <h1 id="color2" class="space">200Tk</h1>
+        <h1 class="space">500Tk</h1>
+        <h1 class="space">1000Tk</h1>
+        <h1 class="space">5000Tk</h1>
+    </div>
+
+    <h5 id="center3">Other Amount (Taka)</h5>
+    <hr>
+    <a id="mid" class="link-margin" href="https://www.bkash.com/" target="_blank">Donate Now</a>
+    </div>
+
+
+    <h1 id="space1" class="center3">Our Donation Plan</h1>
+    <p class="center3">We Are a Non-Profit Organisation Raising Funds and <br> Donations in Kind for Our Programmes.</p>
+
+    <div class="flex1">
+        <div id="bg-food">
+            <div id="food">
+                <img src="icon/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>Your donation will serve food <br> packages to families.</p>
+            </div>
         </div>
-    </section>
+
+        <div id="bg-shelter">
+            <div id="shelter">
+                <img src="icon/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p> Emergency shelters and homeless shelters <br> and some transitional housing opportunities. </p>
+            </div>
+        </div>
+
+        <div id="bg-education">
+            <div id="education">
+                <img src="icon/Frame-1.png" alt="">
+                <h3>Education for a child</h3>
+                <p>Learn about Teach the World's <br> education efforts in Bangladesh.</p>
+            </div>
+        </div>
+    </div>
+
+    <footer class="center3">
+        <h1 id="orange">Be Humble</h1>
+        <h4><span id="blue">I’m gonna do</span> it</h4>
+    </footer>
+
 
 
 
