Bonus part added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,58 @@
         </div>
     </div>
 
+
+
+    <div class="flex2">
+        <div>
+            <h1>Help Families in Crisis</h1>
+            <p id="margin-bottom">People are facing desperate, life-threatening <br> situations around the world along
+                with
+                the <br>
+                impact of
+                COVID-19.Help us send CARE <br> Packages to meet their needs.</p>
+            <a id="button" class="link-margin" href="https://www.bkash.com/" target="_blank">How to Contribute
+                ?</a>
+        </div>
+
+        <div id="img-set">
+            <img src="images/bg.jpeg" alt="">
+        </div>
+    </div>
+
+
+    <div class="flex3">
+        <div id="img2nd">
+            <img src="images/hunger.jpg" alt="">
+        </div>
+
+        <div id="margin-sett">
+            <h1>Donate to Hunger & <br> Saves the Lives !</h1>
+            <p id="margin-bottom1">you can help relieve the people of Bangladesh <br> from their daily struggle against
+                hunger. </p>
+
+            <a id="mi" class="link-margin" href="https://www.bkash.com/" target="_blank">How to Contribute
+                ?</a>
+        </div>
+
+    </div>
+    </div>
+
+    <div class="middle">
+        <h1 id="margin-top">Get My Updates</h1>
+        <p id="margin1">It is an easy way to get my update</p>
+    </div>
+
+    <div class="last-flex">
+        <div id="email">
+            <div>Email</div>
+        </div>
+
+        <div id="subscribe">
+            <div>Subscribe</div>
+        </div>
+    </div>
+
     <footer class="center3">
         <h1 id="orange">Be Humble</h1>
         <h4><span id="blue">I’m gonna do</span> it</h4>
